@@ -49,7 +49,10 @@ void network_status(int verbosity, OvmsWriter* writer, OvmsCommand* cmd, int arg
   struct netif *ni = netif_list;
   while (ni)
     {
-    writer->printf("Interface#%d: %c%c\n",ni->num,ni->name[0],ni->name[1]);
+    writer->printf("Interface#%d: %c%c%d (ifup=%d linkup=%d)\n",
+      ni->num,ni->name[0],ni->name[1],ni->num,
+      ((ni->flags & NETIF_FLAG_UP) != 0),
+      ((ni->flags & NETIF_FLAG_LINK_UP) != 0));
     writer->printf("  IPv4: " IPSTR "/" IPSTR " gateway " IPSTR "\n",
       IP2STR(&ni->ip_addr.u_addr.ip4), IP2STR(&ni->netmask.u_addr.ip4), IP2STR(&ni->gw.u_addr.ip4));
     ni = ni->next;
@@ -74,6 +77,19 @@ void network_status(int verbosity, OvmsWriter* writer, OvmsCommand* cmd, int arg
     writer->puts(" None");
   else
     writer->puts("");
+
+  if (netif_default)
+    {
+    writer->printf("\nDefault Interface: %c%c%d (" IPSTR "/" IPSTR " gateway " IPSTR ")\n",
+      netif_default->name[0], netif_default->name[1], netif_default->num,
+      IP2STR(&netif_default->ip_addr.u_addr.ip4),
+      IP2STR(&netif_default->netmask.u_addr.ip4),
+      IP2STR(&netif_default->gw.u_addr.ip4));
+    }
+  else
+    {
+    writer->printf("\nDefault Interface: None\n");
+    }
   }
 
 OvmsNetManager::OvmsNetManager()
@@ -82,6 +98,7 @@ OvmsNetManager::OvmsNetManager()
   m_connected_wifi = false;
   m_connected_modem = false;
   m_connected_any = false;
+  m_wifi_ap = false;
 
 #ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
   m_mongoose_task = 0;
@@ -96,12 +113,12 @@ OvmsNetManager::OvmsNetManager()
   #undef bind  // Kludgy, but works
   using std::placeholders::_1;
   using std::placeholders::_2;
-  MyEvents.RegisterEvent(TAG,"system.wifi.sta.gotip", std::bind(&OvmsNetManager::WifiUp, this, _1, _2));
-  MyEvents.RegisterEvent(TAG,"system.wifi.ap.start", std::bind(&OvmsNetManager::WifiUp, this, _1, _2));
-  MyEvents.RegisterEvent(TAG,"system.wifi.sta.stop", std::bind(&OvmsNetManager::WifiDown, this, _1, _2));
-  MyEvents.RegisterEvent(TAG,"system.wifi.ap.stop", std::bind(&OvmsNetManager::WifiDown, this, _1, _2));
-  MyEvents.RegisterEvent(TAG,"system.wifi.sta.disconnected", std::bind(&OvmsNetManager::WifiDown, this, _1, _2));
-  MyEvents.RegisterEvent(TAG,"system.wifi.down", std::bind(&OvmsNetManager::WifiDown, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.sta.gotip", std::bind(&OvmsNetManager::WifiUpSTA, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.ap.start", std::bind(&OvmsNetManager::WifiUpAP, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.sta.stop", std::bind(&OvmsNetManager::WifiDownSTA, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.ap.stop", std::bind(&OvmsNetManager::WifiDownAP, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.sta.disconnected", std::bind(&OvmsNetManager::WifiDownSTA, this, _1, _2));
+  MyEvents.RegisterEvent(TAG,"system.wifi.down", std::bind(&OvmsNetManager::WifiDownSTA, this, _1, _2));
   MyEvents.RegisterEvent(TAG,"system.modem.gotip", std::bind(&OvmsNetManager::ModemUp, this, _1, _2));
   MyEvents.RegisterEvent(TAG,"system.modem.stop", std::bind(&OvmsNetManager::ModemDown, this, _1, _2));
   MyEvents.RegisterEvent(TAG,"system.modem.down", std::bind(&OvmsNetManager::ModemDown, this, _1, _2));
@@ -116,10 +133,11 @@ OvmsNetManager::~OvmsNetManager()
   {
   }
 
-void OvmsNetManager::WifiUp(std::string event, void* data)
+void OvmsNetManager::WifiUpSTA(std::string event, void* data)
   {
   m_connected_wifi = true;
   m_connected_any = m_connected_wifi || m_connected_modem;
+  SetInterfacePriority();
   StandardMetrics.ms_m_net_type->SetValue("wifi");
 #ifdef CONFIG_OVMS_COMP_WIFI
   StandardMetrics.ms_m_net_provider->SetValue(MyPeripherals->m_esp32wifi->GetSSID());
@@ -131,12 +149,13 @@ void OvmsNetManager::WifiUp(std::string event, void* data)
 #endif //#ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
   }
 
-void OvmsNetManager::WifiDown(std::string event, void* data)
+void OvmsNetManager::WifiDownSTA(std::string event, void* data)
   {
   if (m_connected_wifi)
     {
     m_connected_wifi = false;
     m_connected_any = m_connected_wifi || m_connected_modem;
+    SetInterfacePriority();
     MyEvents.SignalEvent("network.wifi.down",NULL);
     if (m_connected_any)
       MyEvents.SignalEvent("network.reconfigured",NULL);
@@ -152,10 +171,27 @@ void OvmsNetManager::WifiDown(std::string event, void* data)
     }
   }
 
+void OvmsNetManager::WifiUpAP(std::string event, void* data)
+  {
+  m_wifi_ap = true;
+#ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
+  StartMongooseTask();
+#endif //#ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
+  }
+
+void OvmsNetManager::WifiDownAP(std::string event, void* data)
+  {
+  m_wifi_ap = false;
+#ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
+  StopMongooseTask();
+#endif //#ifdef CONFIG_OVMS_SC_GPL_MONGOOSE
+  }
+
 void OvmsNetManager::ModemUp(std::string event, void* data)
   {
   m_connected_modem = true;
   m_connected_any = m_connected_wifi || m_connected_modem;
+  SetInterfacePriority();
   StandardMetrics.ms_m_net_type->SetValue("modem");
   MyEvents.SignalEvent("network.modem.up",NULL);
   MyEvents.SignalEvent("network.up",NULL);
@@ -170,6 +206,7 @@ void OvmsNetManager::ModemDown(std::string event, void* data)
     {
     m_connected_modem = false;
     m_connected_any = m_connected_wifi || m_connected_modem;
+    SetInterfacePriority();
     MyEvents.SignalEvent("network.modem.down",NULL);
     if (m_connected_any)
       MyEvents.SignalEvent("network.reconfigured",NULL);
@@ -219,6 +256,37 @@ void OvmsNetManager::InterfaceUp(std::string event, void* data)
   for (;spos<DNS_MAX_SERVERS;spos++)
     {
     dns_setserver(spos, IP_ADDR_ANY);
+    }
+  }
+
+void OvmsNetManager::SetInterfacePriority()
+  {
+  const char *search = NULL;
+
+  // Priority order...
+  if (m_connected_wifi)
+    {
+    // Wifi is up
+    search = "st";
+    }
+  else if (m_connected_modem)
+    {
+    // Modem is up
+    search = "pp";
+    }
+
+  if (search == NULL) return;
+  for (struct netif *pri = netif_list; pri != NULL; pri=pri->next)
+    {
+    if ((pri->name[0]==search[0])&&
+        (pri->name[1]==search[1]))
+      {
+      ESP_LOGI(TAG, "Interface priority is %c%c%d (" IPSTR "/" IPSTR " gateway " IPSTR ")",
+        pri->name[0], pri->name[1], pri->num,
+        IP2STR(&pri->ip_addr.u_addr.ip4), IP2STR(&pri->netmask.u_addr.ip4), IP2STR(&pri->gw.u_addr.ip4));
+      netif_set_default(pri);
+      return;
+      }
     }
   }
 
